# 2DTissue

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Manifest.toml  Project.toml  README.md  build.rs  default.nix  geodesic_distance.cpp  main.jl  n_data_860.csv  r_data_860.csv  requirements.txt
.github/workflows/: c-cpp.yml  ci.yml  macOS.yml  ubuntu.yml
include/: 2DTissue.h  Cell.h  GeometryProcessing.h  IO.h  LinearAlgebra.h  Simulator.h  Validation.h  VirtualMesh.h  analytics.h  csv_loader.h  dye_particle.h  init_particle_position.h  julia_handler.h  matrix_algebra.h  mesh_analysis.h  mesh_loader.h  process_invalid_particle.h  sim_structs.h  uv_operations.h  uv_surface.h  validity_check.h
include/io/: csv.h  mesh_loader.h
include/particle_simulation/: cell_cell_interactions.h  forces.h  motion.h  particle_vector.h  process_invalid_particle.h  simulation.h
include/utilities/: 2D_3D_mapping.h  2D_mapping.h  2D_mapping_fixed_border.h  2D_mapping_free_border.h  2D_surface.h  analytics.h  angles_to_unit_vectors.h  barycentric_coord.h  boundary_check.h  check_boundary.h  check_validity.h  distance.h  dye_particle.h  error_checking.h  init_particle.h  mesh_descriptor.h  nearest_map.h  paths_lib.h  process_invalid_particle.h  process_points.h  sim_structs.h  splay_state.h  update.h  validity_check.h
meshes/: cut_line.selection.txt  cut_line_sphere.selection.txt  ellipsoid_uv.off  ellipsoid_x4.off
src/: ARAP_uv.cpp  Basic.jl  Confined_active_particles.jl  GeomProcessing.jl  Makefile  Packages.jl  SoftCondMatter.jl  calc_distance  calc_distance.cpp  calc_path.cpp  calc_virtual_border.cpp  calc_virtual_border.h  call_func.cpp  create_seam_mesh.cpp  create_uv_surface  create_uv_surface.cpp  flatten_closed_mesh.cpp  flatten_mesh.cpp  geodesic_distance.cpp  hello.cpp  input.h  julia_debug.txt  libhello.cpp  main.cpp  main.rs  orbifold  orbifold.cpp  test_cgal.cpp  test_cpp.jl  visualize_3D_data.jl
src/GeomProcessing/: analytics.cpp  create_uv_surface.cpp  csv_loader.cpp  dye_particle.cpp  flight_of_the_particle.cpp  flight_of_the_particle.h  geo_distance.cpp  geo_distance.h  geodesic_distance.cpp  julia_handler.cpp  load_csv.cpp  load_csv.h  matrix_algebra.cpp  mesh_analysis.cpp  mesh_loader.cpp  particle_forces.cpp  particle_simulation.cpp  particle_vector.cpp  particle_vector.h  process_invalid_particle.cpp  sim_structs.cpp  uv_operations.cpp  uv_surface.cpp  uv_surface.h  validity_check.cpp
src/data_analysis/: order_trend.ipynb  order_trend.py  visualize_3D_data.jl  visualize_3D_data.py
src/simulation/: 2DTissue.cpp  2DTissue.h  Cell.cpp  Cell.h  CellHelper.cpp  CellHelper.h  Compass.h  EuclideanTiling.cpp  EuclideanTiling.h  GeodesicDistance.cpp  GeodesicDistance.h  GeometryProcessing.cpp  GeometryProcessing.h  IO.cpp  IO.h  LinearAlgebra.cpp  LinearAlgebra.h  Locomotion.cpp  Locomotion.h  LocomotionHelperInterface.h  Simulator.cpp  Simulator.h  SimulatorHelper.cpp  SimulatorHelper.h  Struct.h  SurfaceParametrization.cpp  SurfaceParametrization.h  Validation.cpp  Validation.h  VirtualMesh.cpp  VirtualMesh.h  analytics.cpp  basic.cpp  create_uv_surface.cpp  csv_loader.cpp  flight_of_the_particle.cpp  geo_distance.cpp  init_particle_position.cpp  julia_handler.cpp  main.cpp  (+5 more)
src/simulation/Locomotion/: EuclideanTiling.cpp  EuclideanTiling.h  ForceHelper.cpp  ForceHelper.h  OrientationHelper.cpp  OrientationHelper.h
src/simulation/io/: csv.cpp  csv_loader.cpp  mesh_loader.cpp
src/simulation/particle_simulation/: cell_cell_interactions.cpp  flight_of_the_particle.cpp  forces.cpp  motion.cpp  particle_forces.cpp  particle_vector.cpp  process_invalid_particle.cpp  simulation.cpp
src/simulation/utilities/: 2D_3D_mapping.cpp  2D_mapping.cpp  2D_mapping_fixed_border.cpp  2D_mapping_free_border.cpp  2D_surface.cpp  analytics.cpp  angles_to_unit_vectors.cpp  barycentric_coord.cpp  boundary_check.cpp  check_boundary.cpp  check_validity.cpp  distance.cpp  dye_particle.cpp  error_checking.cpp  geo_distance.cpp  init_particle.cpp  init_particle_position.cpp  julia_handler.cpp  matrix_algebra.cpp  mesh_analysis.cpp  mesh_descriptor.cpp  nearest_map.cpp  paths_lib.cpp  process_invalid_particle.cpp  process_points.cpp  sim_structs.cpp  splay_state.cpp  update.cpp  uv_operations.cpp  uv_surface.cpp  validity_check.cpp
src/utils/: DatabaseManager.h  KafkaProducer.h
tests/simulation/: test_Compass.cpp  test_EuclideanTiling.cpp  test_GeometryProcessing.cpp  test_LinearAlgebra.cpp  test_Locomotion.cpp  test_Simulator.cpp
tests/simulation/particle_simulation/: test_cell_cell_interactions.cpp  test_forces.cpp  test_motion.cpp
tests/simulation/utilities/: test_2D_surface.cpp  test_angles_to_unit_vectors.cpp
